# QtAdditions

./: CMakeLists.txt
examples/ExampleListHeaderWidget/: CMakeLists.txt
examples/ExampleTableWithCombo/: CMakeLists.txt
examples/ExampleWidgetList/: CMakeLists.txt
include/dak/QtAdditions/: QWidgetListItem.h  QWidgetListWidget.h
src/: QWidgetListItem.cpp  QWidgetListWidget.cpp  QWidgetScrollListWidget.cpp  QtUtilities.cpp
